--- a/Ship.Web/Views/Shared/_Layout.cshtml
+++ b/Ship.Web/Views/Shared/_Layout.cshtml
@@ -11,12 +11,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - 帆海船员管理系统</title>
-    <link href="http://cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://cdn.bootcss.com/Uniform.js/2.1.2/themes/default/css/uniform.default.min.css" rel="stylesheet">
-    <link href="http://cdn.bootcss.com/iCheck/1.0.1/skins/minimal/blue.css" rel="stylesheet">
-    <link href="http://cdn.bootcss.com/select2/3.5.2/select2.min.css" rel="stylesheet">
-    <link href="http://cdn.bootcss.com/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker3.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/Uniform.js/2.1.2/themes/default/css/uniform.default.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/iCheck/1.0.1/skins/minimal/blue.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/select2/3.5.2/select2.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker3.min.css" rel="stylesheet">
     <link href="~/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" />
     <link href="~/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" />
     <link href="~/plugins/datatables/plugins/bootstrap/dataTables.bootstrap.css" rel="stylesheet" />
@@ -29,8 +28,8 @@
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.2/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css"
+              asp-fallback-href="~/plugins/bootstrap/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
@@ -45,7 +44,7 @@
                 <!-- BEGIN LOGO -->
                 <div class="page-logo">
                     <a asp-area="" asp-controller="Home" asp-action="Index">
-                        <img src="~/assets/layout3/img/logo-crew-default.png" />
+                        <img src="~/layout3/img/logo-crew-default.png" />
                     </a>
                 </div>
                 <!-- END LOGO -->
@@ -485,26 +484,26 @@
     <!-- BEGIN CORE PLUGINS -->
     <!--[if lt IE 9]>
     <script src="~/Scripts/respond.min.js"></script>
-    <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <script src="~/assets/plugins/excanvas.min.js"></script>
     <![endif]-->
-    <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-    <script src="http://cdn.bootcss.com/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
-    <script src="http://cdn.bootcss.com/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap-hover-dropdown/2.0.10/bootstrap-hover-dropdown.min.js"></script>
-    <script src="http://cdn.bootcss.com/jQuery-slimScroll/1.3.2/jquery.slimscroll.min.js"></script>
-    <script src="http://cdn.bootcss.com/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script>
-    <script src="http://cdn.bootcss.com/Uniform.js/2.1.2/jquery.uniform.min.js"></script>
-    <script src="http://cdn.bootcss.com/iCheck/1.0.1/icheck.min.js"></script>
-    <script src="http://cdn.bootcss.com/select2/3.5.2/select2.min.js"></script>
-    <script src="http://cdn.bootcss.com/select2/3.5.2/select2_locale_zh-CN.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap-datepicker/1.4.0/locales/bootstrap-datepicker.zh-CN.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootbox.js/4.3.0/bootbox.min.js"></script>
-    <script src="http://cdn.bootcss.com/jquery-validate/1.13.1/jquery.validate.min.js"></script>
-    <script src="http://cdn.bootcss.com/datatables/1.10.2/js/jquery.dataTables.min.js"></script>
-    <script src="http://cdn.bootcss.com/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
+    <script src="https://cdn.bootcss.com/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-hover-dropdown/2.0.10/bootstrap-hover-dropdown.min.js"></script>
+    <script src="https://cdn.bootcss.com/jQuery-slimScroll/1.3.2/jquery.slimscroll.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script>
+    <script src="https://cdn.bootcss.com/Uniform.js/2.1.2/jquery.uniform.min.js"></script>
+    <script src="https://cdn.bootcss.com/iCheck/1.0.1/icheck.min.js"></script>
+    <script src="https://cdn.bootcss.com/select2/3.5.2/select2.min.js"></script>
+    <script src="https://cdn.bootcss.com/select2/3.5.2/select2_locale_zh-CN.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datepicker/1.4.0/locales/bootstrap-datepicker.zh-CN.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootbox.js/4.3.0/bootbox.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-validate/1.13.1/jquery.validate.min.js"></script>
+    <script src="https://cdn.bootcss.com/datatables/1.10.2/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.bootcss.com/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
 
     <script src="~/plugins/datatables/plugins/bootstrap/dataTables.bootstrap.js"></script>
     <script src="~/scripts/messages_zh.js"></script>
@@ -523,20 +522,28 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
-        <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"
+        <script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
                 integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
         </script>
-        <script src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+        <script src="https://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"
+                asp-fallback-src="~/plugins/bootstrap/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
+
+    <script>
+        jQuery(document).ready(function () {
+            Metronic.init(); // init metronic core components
+            Layout.init(); // init current layout
+            Demo.init(); // init demo features
+        });
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
