--- a/Ship.Web/Views/_ViewImports.cshtml
+++ b/Ship.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Ship.Core.Entities
 @using Ship.Web
 @using Ship.Web.Models
+@using Ship.Web.Components
 @using X.PagedList.Mvc.Core
 @using X.PagedList
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
