--- a/Ship.Web/Views/Account/ChangePassword.cshtml
+++ b/Ship.Web/Views/Account/ChangePassword.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "修改密码";
 }
-<link href="~/assets/pages/css/profile.css" rel="stylesheet" />
+<link href="~/pages/css/profile.css" rel="stylesheet" />
 <!-- BEGIN PAGE CONTENT -->
 <div class="page-content">
     <div class="container">
