--- a/Ship.Web/Views/Account/UserCenter.cshtml
+++ b/Ship.Web/Views/Account/UserCenter.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "个人中心";
 }
-<link href="~/assets/pages/css/profile.css" rel="stylesheet" />
+<link href="~/pages/css/profile.css" rel="stylesheet" />
 <!-- BEGIN PAGE CONTENT -->
 <div class="page-content">
     <div class="container">
