--- a/Ship.Web/Views/Shared/_Layout.cshtml
+++ b/Ship.Web/Views/Shared/_Layout.cshtml
@@ -12,11 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - 帆海船员管理系统</title>
     <link href="https://cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" />
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/Uniform.js/2.1.2/themes/default/css/uniform.default.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/iCheck/1.0.1/skins/minimal/blue.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/select2/3.5.2/select2.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker3.min.css" rel="stylesheet">
-    <link href="~/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" />
     <link href="~/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" />
     <link href="~/plugins/datatables/plugins/bootstrap/dataTables.bootstrap.css" rel="stylesheet" />
     <link href="~/css/components-rounded.css" rel="stylesheet" id="style_components" />
@@ -24,7 +25,6 @@
     <link href="~/layout3/css/layout.css" rel="stylesheet" />
     <link href="~/layout3/css/themes/default.css" rel="stylesheet" />
     <environment include="Development">
-        <link href="~/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
@@ -483,9 +483,8 @@
     <!-- BEGIN JAVASCRIPTS (Load javascripts at bottom, this will reduce page load time) -->
     <!-- BEGIN CORE PLUGINS -->
     <!--[if lt IE 9]>
-    <script src="~/Scripts/respond.min.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <script src="~/assets/plugins/excanvas.min.js"></script>
+    <script src="/plugins/excanvas.min.js"></script>
     <![endif]-->
     <script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
