--- a/Ship.Web/Views/Account/Login.cshtml
+++ b/Ship.Web/Views/Account/Login.cshtml
@@ -3,11 +3,11 @@
     ViewBag.Title = "登录";
     Layout = "~/Views/Shared/_LayoutNoHeader.cshtml";
 }
-<link href="~/assets/pages/css/login-soft.css" rel="stylesheet" />
+<link href="~/pages/css/login-soft.css" rel="stylesheet" />
 <!-- BEGIN LOGO -->
 <div class="logo">
     <a asp-controller="Home" asp-action="Index">
-        <img src="~/assets/layout3/img/logo-crew-default.png" asp-append-version="true" />
+        <img src="~/layout3/img/logo-crew-default.png" asp-append-version="true" />
     </a>
 </div>
 <!-- END LOGO -->
@@ -61,10 +61,10 @@
             $('body').addClass('login');
             // init background slide images
             $.backstretch([
-             "../assets/pages/media/bg/1.jpg",
-             "../assets/pages/media/bg/2.jpg",
-             "../assets/pages/media/bg/3.jpg",
-             "../assets/pages/media/bg/4.jpg"
+             "../pages/media/bg/1.jpg",
+             "../pages/media/bg/2.jpg",
+             "../pages/media/bg/3.jpg",
+             "../pages/media/bg/4.jpg"
             ], {
                 fade: 1000,
                 duration: 8000
