--- a/Ship.Web/Views/Shared/_Layout.cshtml
+++ b/Ship.Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
         @RenderBody()
     </div>
     <!-- END PAGE CONTAINER -->
-    @await Component.InvokeAsync(nameof(PreFooter))
+    <partial name="_PreFooter" />
     <!-- BEGIN FOOTER -->
     <div class="page-footer">
         <div class="container">
