--- a/Ship.Web/Views/Shipowner/Create.cshtml
+++ b/Ship.Web/Views/Shipowner/Create.cshtml
@@ -10,11 +10,11 @@
         <!-- BEGIN PAGE BREADCRUMB -->
         <ul class="page-breadcrumb breadcrumb">
             <li>
-                @Html.ActionLink("首页", "Index", "Home")
+                <a asp-controller="Home" asp-action="Index">首页</a>
                 <i class="fa fa-circle"></i>
             </li>
             <li>
-                @Html.ActionLink("船东管理", "Index")
+                <a asp-action="Index">船东管理</a>
                 <i class="fa fa-circle"></i>
             </li>
             <li class="active">
@@ -34,54 +34,30 @@
                     </div>
                     <div class="portlet-body form">
                         <!-- BEGIN FORM-->
-                        @using (Html.BeginForm("Create", "Shipowner", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                        {
+                        <form asp-controller="Shipowner" asp-action="Create" method="post" class="form-horizontal" role="form">
                             <div class="form-body">
-                                @Html.AntiForgeryToken()
-                                @Html.ValidationSummary(true)
+                                <div asp-validation-summary="ModelOnly"></div>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label class="control-label col-md-3" for="Name">
+                                            <label class="control-label col-md-3" asp-for="Name">
                                                 @Html.DisplayNameFor(model => model.Name)
                                                 <span class="required" aria-required="true">*</span>
                                             </label>
                                             <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Name)
+                                                <input asp-for="Name" class="form-control"/>
+                                                <span asp-validation-for="Name"></span>
                                             </div>
                                         </div>
                                     </div>
                                     <!--/span-->
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.Contacter, new { @class = "control-label col-md-3" })
+                                            <label class="control-label col-md-3" asp-for="Contacter">
+                                            </label>
                                             <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Contacter, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Contacter)
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!--/span-->
-                                </div>
-                                <!--/row-->
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            @Html.LabelFor(model => model.Address, new { @class = "control-label col-md-3" })
-                                            <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Address)
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!--/span-->
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            @Html.LabelFor(model => model.Telephone, new { @class = "control-label col-md-3" })
-                                            <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Telephone, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Telephone)
+                                                <input asp-for="Contacter" class="form-control" />
+                                                <span asp-validation-for="Contacter"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -91,20 +67,22 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.Fax, new { @class = "control-label col-md-3" })
+                                            <label class="control-label col-md-3" asp-for="Address">
+                                            </label>
                                             <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Fax, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Fax)
+                                                <input asp-for="Address" class="form-control" />
+                                                <span asp-validation-for="Address"></span>
                                             </div>
                                         </div>
                                     </div>
                                     <!--/span-->
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
+                                            <label class="control-label col-md-3" asp-for="Telephone">
+                                            </label>
                                             <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Email)
+                                                <input asp-for="Telephone" class="form-control" />
+                                                <span asp-validation-for="Telephone"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -114,19 +92,46 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.Website, new { @class = "control-label col-md-3" })
+                                            <label class="control-label col-md-3" asp-for="Fax">
+                                            </label>
                                             <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Website, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Website)
+                                                <input asp-for="Fax" class="form-control" />
+                                                <span asp-validation-for="Fax"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--/span-->
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="control-label col-md-3" asp-for="Email">
+                                            </label>
+                                            <div class="col-md-9">
+                                                <input asp-for="Email" class="form-control" />
+                                                <span asp-validation-for="Email"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--/span-->
+                                </div>
+                                <!--/row-->
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="control-label col-md-3" asp-for="Website">
+                                            </label>
+                                            <div class="col-md-9">
+                                                <input asp-for="Website" class="form-control" />
+                                                <span asp-validation-for="Website"></span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.Representative, new { @class = "control-label col-md-3" })
+                                            <label class="control-label col-md-3" asp-for="Representative">
+                                            </label>
                                             <div class="col-md-9">
-                                                @Html.EditorFor(model => model.Representative, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Representative)
+                                                <input asp-for="Representative" class="form-control" />
+                                                <span asp-validation-for="Representative"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -135,10 +140,11 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.PostalCode, new { @class = "control-label col-md-3" })
+                                            <label class="control-label col-md-3" asp-for="PostalCode">
+                                            </label>
                                             <div class="col-md-9">
-                                                @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.PostalCode)
+                                                <input asp-for="PostalCode" class="form-control" />
+                                                <span asp-validation-for="PostalCode"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -156,7 +162,7 @@
                                         <div class="row">
                                             <div class="col-md-offset-3 col-md-9">
                                                 <button type="submit" class="btn green"><i class="fa fa-save"></i> 保存</button>
-                                                <a href="@Url.Action("Index")" class="btn default"><i class="fa fa-undo"></i> 返回列表</a>
+                                                <a asp-action="Index" class="btn default"><i class="fa fa-undo"></i> 返回列表</a>
                                             </div>
                                         </div>
                                     </div>
@@ -164,7 +170,7 @@
                                     </div>
                                 </div>
                             </div>
-                        }
+                        </form>
                         <!-- END FORM-->
                     </div>
                 </div>
