--- a/Ship.Web/Views/Shipowner/Create.cshtml
+++ b/Ship.Web/Views/Shipowner/Create.cshtml
@@ -40,9 +40,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label class="control-label col-md-3" asp-for="Name">
-                                                @Html.DisplayNameFor(model => model.Name)
-                                                <span class="required" aria-required="true">*</span>
+                                            <label class="control-label col-md-3" asp-for="Name" asterisk>
                                             </label>
                                             <div class="col-md-9">
                                                 <input asp-for="Name" class="form-control"/>
