--- a/Ship.Web/Views/Shared/_Layout.cshtml
+++ b/Ship.Web/Views/Shared/_Layout.cshtml
@@ -73,29 +73,7 @@
         <i class="icon-arrow-up"></i>
     </div>
     <!-- END FOOTER -->
-    <!-- BEGIN JAVASCRIPTS (Load javascripts at bottom, this will reduce page load time) -->
-    <!-- BEGIN CORE PLUGINS -->
-    <!--[if lt IE 9]>
-    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <script src="/plugins/excanvas.min.js"></script>
-    <![endif]-->
-    <script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
-    <script src="https://cdn.bootcss.com/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap-hover-dropdown/2.0.10/bootstrap-hover-dropdown.min.js"></script>
-    <script src="https://cdn.bootcss.com/jQuery-slimScroll/1.3.2/jquery.slimscroll.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script>
-    <script src="https://cdn.bootcss.com/Uniform.js/2.1.2/jquery.uniform.min.js"></script>
-    <script src="https://cdn.bootcss.com/iCheck/1.0.1/icheck.min.js"></script>
-    <script src="https://cdn.bootcss.com/select2/3.5.2/select2.min.js"></script>
-    <script src="https://cdn.bootcss.com/select2/3.5.2/select2_locale_zh-CN.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap-datepicker/1.4.0/locales/bootstrap-datepicker.zh-CN.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootbox.js/4.3.0/bootbox.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery-validate/1.13.1/jquery.validate.min.js"></script>
-    <script src="https://cdn.bootcss.com/datatables/1.10.2/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.bootcss.com/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+    <partial name="_CoreScriptsPartial" />
 
     <script src="~/plugins/datatables/plugins/bootstrap/dataTables.bootstrap.js"></script>
     <script src="~/scripts/messages_zh.js"></script>
